role list has been added

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -41,10 +41,8 @@
     "UPDATE_TITLE": "Update Role",
     "TABLE": {
       "NAME": "Role Name",
-      "DESC": "Description",
-      "LEVEL": "Seviye"
+      "DESC": "Description"
     },
-    "DELETE_WARNING_MSG": "Rolü silmek istediğinize emin misiniz?",
     "PRIVILEGES": {
       "TITLE": "Rol Yetkileri",
       "ADMIN_ACCESS": "Yönetici Erişimi",
